test/conformance/chainsaw/generating-policies/nosync/nosync-modify-policy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: nosync-modify-policy
spec:
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: create namespace
    try:
    - apply:
        file: namespace.yaml
  - name: check that configmap is generated
    try:
    - assert:
        file: downstream-assert.yaml
  - name: modify the policy
    try:
    - apply:
        file: policy-modified.yaml
  - name: check that the downstream isn't updated
    try:
    - assert:
        file: downstream-untouched.yaml
